--- a/可视化结果/1.1 Data/说明.md
+++ b/可视化结果/1.1 Data/说明.md
@@ -14,4 +14,5 @@ dict_3 = {'D': 1, 'ND': 2}
 
 异常值全部化为0，由此转化为函数值
 
-接下来对这三项做饼图
+接下来对这三项做饼图，后两项由于存在相互对应的关系（一方发球必然另一方接球）因此二者做成一个饼图而serve_width由于效果不理想因此不做饼图
+
